SGD8-2500: Fix alignment of single accordion btn

--- a/components/31-molecules/accordion/_accordion.scss
+++ b/components/31-molecules/accordion/_accordion.scss
@@ -15,7 +15,6 @@
       right: 0;
       transition: transform .2s ease-in-out;
       font-size: 1.4rem;
-      line-height: 1.2;
     }
 
     &[aria-expanded=true] {
